syntax = "proto3";

package serviceOne;

option java_package = "com.proto.serviceOne";
option java_multiple_files = true;

service serviceOne {
    //unary method
    rpc TakePicture(TakePictureRequest) returns (TakePictureResponse) {}
    //bidirectional streaming
    rpc StreamMotionEvents(stream MotionEvent) returns (stream Alert) {}
    }

message TakePictureRequest {
  string camera = 1;
}

message TakePictureResponse {
  string result = 1;

}

message MotionEvent {
  int32 zoom = 1;
}

message Alert {
  string cameraFrame = 1;
}